# sheets-parquet-server

./: .gitignore  Dockerfile  LICENSE  README.md  devbox.json  pyproject.toml
.github/workflows/: cd.yaml
src/: main.py  sheets.py  test_main.py
