[tool.poetry]
name = "sheets-server"
version = "0.1.4"
description = "A simple service that serves sheets by sheet_id/:worksheet_name as .csv or .parquet files. Uses PostgreSQL for configuration."
authors = ["Ben Packer <ben.paul.ryan.packer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
gspread = "^6.0.2"
polars = "^0.20.16"
google-auth = "^2.29.0"
uvicorn = "^0.29.0"
pandas = "^2.2.1"
cachetools = "^5.3.3"
grist-api = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
